- Dockerization of entire project - Maven setup to build angular ui